crates/alien-terraform/tests/generator/snapshots/generator__generator__helpers__azure_byo_bucket.snap
---
source: crates/alien-terraform/tests/generator/helpers.rs
expression: buf
---
=== versions.tf ===
terraform {
  required_version = ">= 1.5.0"

  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = ">= 3.100, < 5.0"
    }
    random = {
      source  = "hashicorp/random"
      version = ">= 3.6"
    }
  }
}

=== variables.tf ===
variable "resource_prefix" {
  type        = string
  description = "Optional stable physical resource prefix. Leave empty to generate one."
  default     = ""

  validation {
    condition     = var.resource_prefix == "" || (can(regex("^[a-z][a-z0-9-]{1,38}[a-z0-9]$", var.resource_prefix)) && length(regexall("--", var.resource_prefix)) == 0)
    error_message = "resource_prefix must be 3-40 characters: lowercase letters, numbers, and hyphens; start with a letter; end with a letter or number; and not contain consecutive hyphens."
  }
}

variable "name" {
  type        = string
  description = "Human-readable application name shown in setup and cloud IAM review metadata."
}

variable "token" {
  type        = string
  description = "Install token from the application setup page. This is the same token used by the deploy CLI --token flag."
  sensitive   = true
}

variable "management_url" {
  type        = string
  description = "Management endpoint used to register this deployment."
  default     = ""
}

variable "azure_location" {
  type        = string
  description = "Azure location."
  default     = "eastus"
}

variable "azure_subscription_id" {
  type        = string
  description = "Azure subscription ID hosting the stack."
}

variable "azure_resource_group_name" {
  type        = string
  description = "Azure resource group name."
}

variable "azure_managing_tenant_id" {
  type        = string
  description = "Azure tenant ID that hosts the management identity for cross-tenant access."
}

variable "azure_oidc_issuer" {
  type        = string
  description = "OIDC issuer URL for Azure Federated Identity Credential."
}

variable "azure_oidc_subject" {
  type        = string
  description = "OIDC subject claim for Azure Federated Identity Credential."
}

=== providers.tf ===
provider "azurerm" {
  resource_provider_registrations = "none"

  features {
    resource_group {
      prevent_deletion_if_contains_resources = false
    }
  }
}

=== resource_prefix.tf ===
resource "random_id" "resource_prefix" {
  byte_length = 4
}

=== locals.tf ===
locals {
  resource_prefix              = var.resource_prefix == "" ? format("a%s", random_id.resource_prefix.hex) : var.resource_prefix
  deployment_name              = var.name
  deployment_platform          = "azure"
  deployment_target            = "azure"
  deployment_region            = var.azure_location
  deployment_management_config = null
  deployment_settings = {
    deploymentModel = "push"
    updates         = "approval-required"
    telemetry       = "off"
    heartbeats      = "on"
  }
  deployment_resources = [
    {
      id   = "default-resource-group"
      type = "azure_resource_group"
      importData = {
        subscriptionId = var.azure_subscription_id
        resourceGroup  = azurerm_resource_group.default_resource_group.name
        location       = azurerm_resource_group.default_resource_group.location
      }
    },
    {
      id   = "default-storage-account"
      type = "azure_storage_account"
      importData = {
        subscriptionId     = var.azure_subscription_id
        resourceGroup      = var.azure_resource_group_name
        storageAccountName = azurerm_storage_account.default_storage_account.name
        resourceId         = azurerm_storage_account.default_storage_account.id
        blobEndpoint       = azurerm_storage_account.default_storage_account.primary_blob_endpoint
        fileEndpoint       = azurerm_storage_account.default_storage_account.primary_file_endpoint
        queueEndpoint      = azurerm_storage_account.default_storage_account.primary_queue_endpoint
        tableEndpoint      = azurerm_storage_account.default_storage_account.primary_table_endpoint
      }
    },
    {
      id   = "files"
      type = "storage"
      importData = {
        subscriptionId     = var.azure_subscription_id
        resourceGroup      = var.azure_resource_group_name
        storageAccountName = azurerm_storage_account.default_storage_account.name
        containerName      = azurerm_storage_container.files.name
      }
    },
    {
      id   = "access"
      type = "resource-access"
      importData = {
        tenantId    = data.azurerm_client_config.access_current.tenant_id
        identityId  = azurerm_user_assigned_identity.access.id
        principalId = azurerm_user_assigned_identity.access.principal_id
        clientId    = azurerm_user_assigned_identity.access.client_id
      }
    }
  ]
}

=== default_resource_group.tf ===
resource "azurerm_resource_group" "default_resource_group" {
  name     = var.azure_resource_group_name
  location = var.azure_location
  tags = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "default-resource-group"
    "resource-type" = "resource-group"
  }
}

=== default_storage_account.tf ===
resource "azurerm_storage_account" "default_storage_account" {
  name                            = substr(replace(lower("${local.resource_prefix}default"), "-", ""), 0, 24)
  resource_group_name             = var.azure_resource_group_name
  location                        = var.azure_location
  account_tier                    = "Standard"
  account_replication_type        = "LRS"
  account_kind                    = "StorageV2"
  access_tier                     = "Hot"
  min_tls_version                 = "TLS1_2"
  allow_nested_items_to_be_public = false
  https_traffic_only_enabled      = true
  tags = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "default-storage-account"
    "resource-type" = "storage-account"
  }

  blob_properties {
    versioning_enabled  = false
    change_feed_enabled = false
  }

  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

=== files.tf ===
resource "azurerm_storage_container" "files" {
  name                  = replace(lower("${local.resource_prefix}-files"), "_", "-")
  storage_account_name  = azurerm_storage_account.default_storage_account.name
  container_access_type = "private"
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

resource "azurerm_role_definition" "application_access_read_write_container_blobs_0" {
  name               = "${local.resource_prefix}-Read Write Container Blobs [application-access]"
  role_definition_id = uuidv5("oid", "deployment:azure:application-access-role-def:${local.resource_prefix}:storage/remote-data-write:read-write-container-blobs")
  scope              = "/subscriptions/${var.azure_subscription_id}/resourceGroups/${var.azure_resource_group_name}"
  description        = "Used by ${local.deployment_name}. Read, write, and delete blobs in the selected Azure Storage container. Resource prefix: ${local.resource_prefix}."

  permissions {
    actions = []
    data_actions = [
      "Microsoft.Storage/storageAccounts/blobServices/containers/blobs/delete",
      "Microsoft.Storage/storageAccounts/blobServices/containers/blobs/read",
      "Microsoft.Storage/storageAccounts/blobServices/containers/blobs/write"
    ]
    not_actions      = []
    not_data_actions = []
  }

  assignable_scopes = [
    "/subscriptions/${var.azure_subscription_id}/resourceGroups/${var.azure_resource_group_name}"
  ]
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

resource "azurerm_role_assignment" "files_read_write_container_blobs_access_assignment_0" {
  name               = uuidv5("oid", "deployment:azure:storage-role-assign:${local.resource_prefix}:files:read_write_container_blobs:access:0")
  scope              = "/subscriptions/${var.azure_subscription_id}/resourceGroups/${var.azure_resource_group_name}/providers/Microsoft.Storage/storageAccounts/${azurerm_storage_account.default_storage_account.name}/blobServices/default/containers/${replace(lower("${local.resource_prefix}-files"), "_", "-")}"
  role_definition_id = azurerm_role_definition.application_access_read_write_container_blobs_0.role_definition_resource_id
  principal_id       = azurerm_user_assigned_identity.access.principal_id
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

=== access.tf ===
data "azurerm_client_config" "access_current" {}

resource "azurerm_user_assigned_identity" "access" {
  name                = "${local.resource_prefix}-access-identity"
  resource_group_name = var.azure_resource_group_name
  location            = var.azure_location
  tags = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "access"
    "resource-type" = "resource-access"
  }
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

resource "azurerm_federated_identity_credential" "access_fic" {
  count               = var.azure_oidc_issuer != "" && var.azure_oidc_subject != "" ? 1 : 0
  name                = "${local.resource_prefix}-access-federated-credential"
  resource_group_name = var.azure_resource_group_name
  parent_id           = azurerm_user_assigned_identity.access.id
  audience = [
    "api://AzureADTokenExchange"
  ]
  issuer  = var.azure_oidc_issuer
  subject = var.azure_oidc_subject
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

=== registration.tf ===
resource "terraform_data" "deployment_registration" {
  input = {
    platform                    = local.deployment_platform
    token                       = var.token
    name                        = var.name
    resource_prefix             = local.resource_prefix
    setup_target                = ""
    setup_import_format_version = 1
    setup_fingerprint           = ""
    setup_fingerprint_version   = 0
    management_url              = var.management_url
    management_config           = local.deployment_management_config
    stack_settings              = local.deployment_settings
    resources                   = local.deployment_resources
    inputValues                 = {}
  }
  depends_on = [
    azurerm_resource_group.default_resource_group,
    azurerm_storage_account.default_storage_account,
    azurerm_storage_container.files,
    azurerm_role_definition.application_access_read_write_container_blobs_0,
    azurerm_role_assignment.files_read_write_container_blobs_access_assignment_0,
    azurerm_user_assigned_identity.access,
    azurerm_federated_identity_credential.access_fic
  ]
}

=== outputs.tf ===
output "deployment_target" {
  value       = "azure"
  description = "Terraform module target."
}

output "deployment_resource_prefix" {
  value       = local.resource_prefix
  description = "Physical resource prefix."
}

output "deployment_platform" {
  value       = local.deployment_platform
  description = "Target platform."
}

output "deployment_region" {
  value       = local.deployment_region
  description = "Target cloud region or location."
}

output "deployment_setup_target" {
  value       = ""
  description = "Setup target."
}

output "deployment_setup_import_format_version" {
  value       = 1
  description = "Setup registration payload format version."
}

output "deployment_setup_fingerprint" {
  value       = ""
  description = "Setup compatibility fingerprint."
}

output "deployment_setup_fingerprint_version" {
  value       = 0
  description = "Setup fingerprint algorithm version."
}

output "deployment_management_config" {
  value       = jsonencode(local.deployment_management_config)
  description = "Deployment registration management configuration JSON."
}

output "deployment_stack_settings" {
  value       = jsonencode(local.deployment_settings)
  description = "Deployment registration settings JSON."
  sensitive   = true
}

output "deployment_resources" {
  value       = jsonencode(local.deployment_resources)
  description = "Deployment registration resource metadata JSON."
}

=== PERMISSIONS.md ===
# Application access permissions

The setup creates one narrow application access identity. It can access only the resources listed below; it does not receive the setup's management permissions.

## `files` (storage)

Read and write objects in this storage resource.

Permission set: `storage/remote-data-write` (revision 1).

- Read, write, and delete blobs in the selected Azure Storage container.
  Scope: `/subscriptions/${var.azure_subscription_id}/resourceGroups/${var.azure_resource_group_name}/providers/Microsoft.Storage/storageAccounts/${azurerm_storage_account.default_storage_account.name}/blobServices/default/containers/${replace(lower("${local.resource_prefix}-files"), "_", "-")}`
  - `Microsoft.Storage/storageAccounts/blobServices/containers/blobs/read`
  - `Microsoft.Storage/storageAccounts/blobServices/containers/blobs/write`
  - `Microsoft.Storage/storageAccounts/blobServices/containers/blobs/delete`

=== README.md ===
# Deployment setup - acme-remote-storage

Target: `azure`.

This module creates setup-owned infrastructure, grants the management access needed after setup, and prepares deployment registration metadata. Review the generated `.tf` files before applying; each resource file maps to one setup resource.

## Inputs

Required:

- `token`: install token from the setup page.
- `name`: deployment name to include in the registration metadata.

Common optional settings:

- `resource_prefix`: stable physical-name prefix. Leave empty to generate one.
- `management_url`: management endpoint used to register this deployment. The generated installation snippet supplies the endpoint selected for the deployment target.

Azure settings:

- `azure_subscription_id`: target subscription ID.
- `azure_location`: Azure location.
- `azure_resource_group_name`: target resource group name.
- `azure_managing_tenant_id`, `azure_oidc_issuer`, `azure_oidc_subject`: management identity trust settings when this setup grants Azure management access.

## Run

Use your organization's normal backend and approval workflow. A typical local review looks like:

```bash
export TF_VAR_name="acme-remote-storage"
export TF_VAR_token="..."
terraform init
terraform validate
terraform plan -out=tfplan
terraform apply tfplan
```

## Registration

This module exposes `deployment_management_config`, `deployment_stack_settings`, `deployment_resources`, and (when the stack declares deployer inputs) `deployment_input_values` outputs for registration flows managed outside Terraform.

## Outputs

- `deployment_management_config`: management endpoint and credential-boundary metadata.
- `deployment_stack_settings`: deployment settings JSON assembled from typed variables, package defaults, and advanced-setting overlays.
- `deployment_resources`: setup-owned resource metadata handed to the deployment runtime.
- `deployment_input_values`: deployer input values JSON, emitted only when the stack declares deployer inputs.
- `deployment_id` and `deployment_token`: emitted only when Terraform performs registration.
